R version of kallisto notebook

--- a/kallisto-sleuth-deseq2.ipynb
+++ b/kallisto-sleuth-deseq2.ipynb
@@ -16,7 +16,11 @@
    ],
    "source": [
     "To do:\n",
-    "    can everyone use curl to download the index?"
+    "    can everyone use curl to download the index?\n",
+    "    \n",
+    "    show how to set up notebook in R before opening this\n",
+    "    \n",
+    "    https://docs.anaconda.com/anaconda/navigator/tutorials/r-lang/"
    ]
   },
   {
@@ -62,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# kallisto"
+    "# Running kallisto"
    ]
   },
   {
@@ -144,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# sleuth"
+    "# Running sleuth"
    ]
   },
   {
