update build index

--- a/R-kallisto-sleuth-deseq2.ipynb
+++ b/R-kallisto-sleuth-deseq2.ipynb
@@ -114,15 +114,15 @@
     "\n",
     "##### euploid samples\n",
     "\n",
-    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all_transcripts.idx -o /path/to/SRR5494631 SRR5494631.fastq -b 100 `\n",
+    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all.release-94_k31.idx -o /path/to/SRR5494631 SRR5494631.fastq -b 100 `\n",
     "\n",
-    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all_transcripts.idx -o /path/to/SRR5494630 SRR5494630.fastq -b 100 `\n",
+    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all.release-94_k31.idx -o /path/to/SRR5494630 SRR5494630.fastq -b 100 `\n",
     "\n",
     "##### aneuploid samples\n",
     "\n",
-    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all_transcripts.idx -o /path/to/SRR5494629 SRR5494629.fastq -b 100 `\n",
+    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all.release-94_k31.idx -o /path/to/SRR5494629 SRR5494629.fastq -b 100 `\n",
     "\n",
-    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all_transcripts.idx -o /path/to/SRR5494628 SRR5494628.fastq -b 100 `\n",
+    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all.release-94_k31.idx -o /path/to/SRR5494628 SRR5494628.fastq -b 100 `\n",
     "\n",
     "\n",
     "\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
