Update instructions on kallisto installation

--- a/R-kallisto-sleuth-deseq2.ipynb
+++ b/R-kallisto-sleuth-deseq2.ipynb
@@ -62,12 +62,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since everyone should now have anaconda installed you install kallisto by running...\n",
+    "`kallisto` is the alignment-free transcript quantifier we will be using. In order to download it, follow the link below to the download page for it.\n",
     "\n",
-    "`conda install kallisto`\n",
-    "\n",
-    "\n",
-    "https://pachterlab.github.io/kallisto/download"
+    "Download the version of kallisto for your operating system\n",
+    "[Windows](https://github.com/pachterlab/kallisto/releases/download/v0.46.0/kallisto_windows-v0.46.0.zip)\n",
+    "[Linux](https://github.com/pachterlab/kallisto/releases/download/v0.46.0/kallisto_linux-v0.46.0.tar.gz)\n",
+    "[Mac](https://github.com/pachterlab/kallisto/releases/download/v0.46.0/kallisto_mac-v0.46.0.tar.gz)"
    ]
   },
   {
@@ -138,36 +138,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Bioconductor version 3.9 (BiocManager 1.30.4), R 3.6.0 (2019-04-26)\n",
-      "Update old packages: 'askpass', 'boot', 'caret', 'cluster', 'dbplyr', 'digest',\n",
-      "  'dplyr', 'ellipsis', 'evaluate', 'formatR', 'fs', 'ggplot2', 'glmnet',\n",
-      "  'gower', 'hexbin', 'ipred', 'IRkernel', 'knitr', 'markdown', 'MASS', 'mime',\n",
-      "  'nlme', 'numDeriv', 'openssl', 'pillar', 'processx', 'progress', 'quantmod',\n",
-      "  'repr', 'reprex', 'rlang', 'rmarkdown', 'rvest', 'tibble', 'tinytex', 'xfun',\n",
-      "  'zoo'\n",
-      "Bioconductor version 3.9 (BiocManager 1.30.4), R 3.6.0 (2019-04-26)\n",
-      "Installing package(s) 'sleuth', 'biomaRt'\n",
+      "Installing package into ‘/home/splicecity/R/x86_64-pc-linux-gnu-library/3.4’\n",
+      "(as ‘lib’ is unspecified)\n",
       "Warning message:\n",
-      "“package ‘sleuth’ is not available (for R version 3.6.0)”also installing the dependencies ‘bit’, ‘bit64’, ‘blob’, ‘memoise’, ‘bitops’, ‘BiocGenerics’, ‘Biobase’, ‘IRanges’, ‘RSQLite’, ‘S4Vectors’, ‘XML’, ‘RCurl’, ‘AnnotationDbi’\n",
-      "\n",
-      "Warning message in install.packages(pkgs = doing, lib = lib, repos = repos, ...):\n",
-      "“installation of package ‘XML’ had non-zero exit status”Warning message in install.packages(pkgs = doing, lib = lib, repos = repos, ...):\n",
-      "“installation of package ‘RCurl’ had non-zero exit status”Warning message in install.packages(pkgs = doing, lib = lib, repos = repos, ...):\n",
-      "“installation of package ‘biomaRt’ had non-zero exit status”Updating HTML index of packages in '.Library'\n",
-      "Making 'packages.html' ... done\n",
-      "Update old packages: 'askpass', 'boot', 'caret', 'cluster', 'dbplyr', 'digest',\n",
-      "  'dplyr', 'ellipsis', 'evaluate', 'formatR', 'fs', 'ggplot2', 'glmnet',\n",
-      "  'gower', 'hexbin', 'ipred', 'IRkernel', 'knitr', 'markdown', 'MASS', 'mime',\n",
-      "  'nlme', 'numDeriv', 'openssl', 'pillar', 'processx', 'progress', 'quantmod',\n",
-      "  'repr', 'reprex', 'rlang', 'rmarkdown', 'rvest', 'tibble', 'tinytex', 'xfun',\n",
-      "  'zoo'\n"
+      "“package ‘BiocManager’ is not available (for R version 3.4.4)”"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in loadNamespace(name): there is no package called ‘BiocManager’\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in loadNamespace(name): there is no package called ‘BiocManager’\nTraceback:\n",
+      "1. BiocManager::install",
+      "2. getExportedValue(pkg, name)",
+      "3. asNamespace(ns)",
+      "4. getNamespace(ns)",
+      "5. tryCatch(loadNamespace(name), error = function(e) stop(e))",
+      "6. tryCatchList(expr, classes, parentenv, handlers)",
+      "7. tryCatchOne(expr, names, parentenv, handlers[[1L]])",
+      "8. value[[3L]](cond)"
      ]
     }
    ],
@@ -220,7 +217,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.0"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
