--- a/R-kallisto-sleuth-deseq2.ipynb
+++ b/R-kallisto-sleuth-deseq2.ipynb
@@ -32,8 +32,15 @@
     "Inside of the BD2K folder I will make a folder to save the fastq files.\n",
     "\n",
     "    \"/Users/alexis/Desktop/bd2k/fastq\"\n",
-    "    \n",
-    "????? download by ?????????"
+    "  \n",
+    "`curl -O https://users.soe.ucsc.edu/~bsaintjo/sacCer3_aligned/SRR5494631.fastq.gz`\n",
+    "\n",
+    "`curl -O https://users.soe.ucsc.edu/~bsaintjo/sacCer3_aligned/SRR5494630.fastq.gz`\n",
+    "\n",
+    "`curl -O https://users.soe.ucsc.edu/~bsaintjo/sacCer3_aligned/SRR5494629.fastq.gz`\n",
+    "\n",
+    "\n",
+    "`curl -O https://users.soe.ucsc.edu/~bsaintjo/sacCer3_aligned/SRR5494628.fastq.gz`\n"
    ]
   },
   {
@@ -74,11 +81,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Download the index\n",
+    "https://github.com/pachterlab/kallisto-transcriptome-indices/releases/download/94/Saccharomyces_cerevisiae.R64-1-1.cdna.all.release-94_k31.idx.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Building the index\n",
     "\n",
-    "Before we run kallisto we need to build the index. Download the transcriptome using...\n",
-    "\n",
-    "`curl -O ftp://ftp.ensembl.org/pub/release-94/fasta/homo_sapiens/cdna/Homo_sapiens.GRCh38.cdna.all.fa.gz`\n",
+    "Before we run kallisto we need to build the index. Download the transcriptome.\n",
     "\n",
     "\n",
     "    Usage: kallisto index [arguments] FASTA-files\n",
@@ -111,22 +124,18 @@
     "\n",
     "    -b, --bootstrap-samples=INT   Number of bootstrap samples (default: 0)\n",
     "\n",
+    "*from within the fastq directory*\n",
     "\n",
     "##### euploid samples\n",
     "\n",
-    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all.release-94_k31.idx -o /path/to/SRR5494631 SRR5494631.fastq -b 100 `\n",
+    "`kallisto quant -i /Users/alexis/Desktop/bd2k/Saccharomyces_cerevisiae.R64-1-1.cdna.all.release-94_k31.idx -o /Users/alexis/Desktop/bd2k/kallisto_outputs/SRR5494631 --single -b 100 -l 200 -s 20 -t 2  SRR5494631.fastq.gz `\n",
     "\n",
-    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all.release-94_k31.idx -o /path/to/SRR5494630 SRR5494630.fastq -b 100 `\n",
-    "\n",
+    "`kallisto quant -i /Users/alexis/Desktop/bd2k/Saccharomyces_cerevisiae.R64-1-1.cdna.all.release-94_k31.idx -o /Users/alexis/Desktop/bd2k/kallisto_outputs/SRR5494630 --single -b 100 -l 200 -s 20 -t 2  SRR5494630.fastq.gz`\n",
     "##### aneuploid samples\n",
     "\n",
-    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all.release-94_k31.idx -o /path/to/SRR5494629 SRR5494629.fastq -b 100 `\n",
+    "`kallisto quant -i /Users/alexis/Desktop/bd2k/Saccharomyces_cerevisiae.R64-1-1.cdna.all.release-94_k31.idx -o /Users/alexis/Desktop/bd2k/kallisto_outputs/SRR5494629 --single -b 100 -l 200 -s 20 -t 2  SRR5494629.fastq.gz`\n",
     "\n",
-    "`kallisto quant -i Homo_sapiens.GRCh38.cdna.all.release-94_k31.idx -o /path/to/SRR5494628 SRR5494628.fastq -b 100 `\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "`kallisto quant -i /Users/alexis/Desktop/bd2k/Saccharomyces_cerevisiae.R64-1-1.cdna.all.release-94_k31.idx -o /Users/alexis/Desktop/bd2k/kallisto_outputs/SRR5494628 --single -b 100 -l 200 -s 20 -t 2  SRR5494628.fastq.gz`"
    ]
   },
   {
@@ -138,66 +147,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Bioconductor version 3.9 (BiocManager 1.30.4), R 3.6.0 (2019-04-26)\n",
-      "Update old packages: 'askpass', 'boot', 'caret', 'cluster', 'dbplyr', 'digest',\n",
-      "  'dplyr', 'ellipsis', 'evaluate', 'formatR', 'fs', 'ggplot2', 'glmnet',\n",
-      "  'gower', 'hexbin', 'ipred', 'IRkernel', 'knitr', 'markdown', 'MASS', 'mime',\n",
-      "  'nlme', 'numDeriv', 'openssl', 'pillar', 'processx', 'progress', 'quantmod',\n",
-      "  'repr', 'reprex', 'rlang', 'rmarkdown', 'rvest', 'tibble', 'tinytex', 'xfun',\n",
-      "  'zoo'\n",
-      "Bioconductor version 3.9 (BiocManager 1.30.4), R 3.6.0 (2019-04-26)\n",
-      "Installing package(s) 'sleuth', 'biomaRt'\n",
-      "Warning message:\n",
-      "“package ‘sleuth’ is not available (for R version 3.6.0)”also installing the dependencies ‘bit’, ‘bit64’, ‘blob’, ‘memoise’, ‘bitops’, ‘BiocGenerics’, ‘Biobase’, ‘IRanges’, ‘RSQLite’, ‘S4Vectors’, ‘XML’, ‘RCurl’, ‘AnnotationDbi’\n",
-      "\n",
-      "Warning message in install.packages(pkgs = doing, lib = lib, repos = repos, ...):\n",
-      "“installation of package ‘XML’ had non-zero exit status”Warning message in install.packages(pkgs = doing, lib = lib, repos = repos, ...):\n",
-      "“installation of package ‘RCurl’ had non-zero exit status”Warning message in install.packages(pkgs = doing, lib = lib, repos = repos, ...):\n",
-      "“installation of package ‘biomaRt’ had non-zero exit status”Updating HTML index of packages in '.Library'\n",
-      "Making 'packages.html' ... done\n",
-      "Update old packages: 'askpass', 'boot', 'caret', 'cluster', 'dbplyr', 'digest',\n",
-      "  'dplyr', 'ellipsis', 'evaluate', 'formatR', 'fs', 'ggplot2', 'glmnet',\n",
-      "  'gower', 'hexbin', 'ipred', 'IRkernel', 'knitr', 'markdown', 'MASS', 'mime',\n",
-      "  'nlme', 'numDeriv', 'openssl', 'pillar', 'processx', 'progress', 'quantmod',\n",
-      "  'repr', 'reprex', 'rlang', 'rmarkdown', 'rvest', 'tibble', 'tinytex', 'xfun',\n",
-      "  'zoo'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#instlalling sleuth\n",
-    "if (!requireNamespace(\"BiocManager\", quietly = TRUE))\n",
-    "    install.packages(\"BiocManager\")\n",
-    "BiocManager::install()\n",
-    "\n",
-    "BiocManager::install(c(\"sleuth\", \"biomaRt\"))\n"
+    "source(\"http://bioconductor.org/biocLite.R\")\n",
+    "biocLite(\"rhdf5\")\n",
+    "install.packages(\"devtools\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in library(\"sleuth\"): there is no package called ‘sleuth’\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(\"sleuth\"): there is no package called ‘sleuth’\nTraceback:\n",
-      "1. library(\"sleuth\")"
-     ]
-    }
-   ],
    "source": [
-    "library(\"sleuth\")\n",
-    "library(\"biomaRt\")"
+    "#### Installing Sleuth\n",
+    "In the terminal, activate the new conda environment you made using the anaconda navigator:\n",
+    "\n",
+    "`source activate bd2k-R`\n",
+    "\n",
+    "Use conda to install sleuth:\n",
+    "\n",
+    "`conda install --channel bioconda r-sleuth`\n",
+    "\n",
+    "Now check that sleuth is installed..."
    ]
   },
   {
@@ -205,7 +177,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "library(\"sleuth\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Installing biomart\n",
+    "We will need a package named biomart to convert gene id to gene names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (!requireNamespace(\"BiocManager\", quietly = TRUE))\n",
+    "    install.packages(\"BiocManager\")\n",
+    "\n",
+    "BiocManager::install(\"biomaRt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(\"biomaRt\")"
+   ]
   }
  ],
  "metadata": {
