--- a/R-kallisto-sleuth-deseq2.ipynb
+++ b/R-kallisto-sleuth-deseq2.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To do:\n",
-    "    can everyone use curl to download the index?\n",
-    "    \n",
-    "    show how to set up notebook in R before opening this\n",
+    "# DAY 2\n",
+    "\n",
+    "In order to do differential expression analysis, we need to use another programming language called R. Anaconda provides a convienient way provide an environment with R. Follow the link below and follow the tutorial to build a Python and R environment so you can run the rest of the code.\n",
     "    \n",
     "    https://docs.anaconda.com/anaconda/navigator/tutorials/r-lang/"
    ]
@@ -47,8 +46,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "condition: samples\n",
-    "    \n",
+    "Each file condition \n",
+    "\n",
     "euploid:\n",
     "\n",
     "    SRR5494631    SRR5494630\n",
@@ -225,7 +224,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.0"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
