--- a/2-Shell-and-Git.ipynb
+++ b/2-Shell-and-Git.ipynb
@@ -103,9 +103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-Introduction.ipynb                Pipfile\r\n",
+      "2-Shell-and-Git.ipynb               TODO\r\n",
+      "3-Anaconda-Pandas-Dataframes.ipynb  \u001b[34mdata\u001b[m\u001b[m\r\n",
+      "4-Evolution-and-Mutations.ipynb     \u001b[34mimages\u001b[m\u001b[m\r\n",
+      "5-Visualization.ipynb               install.sh\r\n",
+      "6-Next-Generation-Sequencing.ipynb  style-notebook.css\r\n",
+      "Bonus-SSH-and-Cloud-Computing.ipynb style-table.css\r\n"
+     ]
+    }
+   ],
    "source": [
     "#list the files in the current directory\n",
     "!ls"
@@ -113,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,9 +137,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-Introduction.ipynb\r\n",
+      "2-Shell-and-Git.ipynb\r\n",
+      "3-Anaconda-Pandas-Dataframes.ipynb\r\n",
+      "4-Evolution-and-Mutations.ipynb\r\n",
+      "5-Visualization.ipynb\r\n",
+      "6-Next-Generation-Sequencing.ipynb\r\n",
+      "Bonus-SSH-and-Cloud-Computing.ipynb\r\n",
+      "Pipfile\r\n",
+      "TODO\r\n",
+      "data\r\n",
+      "images\r\n",
+      "install.sh\r\n",
+      "ls-file.txt\r\n",
+      "style-notebook.css\r\n",
+      "style-table.css\r\n"
+     ]
+    }
+   ],
    "source": [
     "#read the file\n",
     "!cat ls-file.txt"
@@ -142,9 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-Introduction.ipynb\r\n",
+      "2-Shell-and-Git.ipynb\r\n",
+      "3-Anaconda-Pandas-Dataframes.ipynb\r\n",
+      "4-Evolution-and-Mutations.ipynb\r\n",
+      "5-Visualization.ipynb\r\n"
+     ]
+    }
+   ],
    "source": [
     "#piping the ls outputs to the head commnad, which shows the first 5 lines\n",
     "!ls | head -5"
@@ -152,9 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5-Visualization.ipynb\r\n"
+     ]
+    }
+   ],
    "source": [
     "#adding another pipe, using tail to read the last line\n",
     "!ls | head -5 |tail -1"
@@ -162,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,9 +228,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-Introduction.ipynb\r\n",
+      "2-Shell-and-Git.ipynb\r\n",
+      "3-Anaconda-Pandas-Dataframes.ipynb\r\n",
+      "4-Evolution-and-Mutations.ipynb\r\n",
+      "5-Visualization.ipynb\r\n",
+      "6-Next-Generation-Sequencing.ipynb\r\n",
+      "Bonus-SSH-and-Cloud-Computing.ipynb\r\n",
+      "Pipfile\r\n",
+      "TODO\r\n",
+      "data\r\n",
+      "images\r\n",
+      "install.sh\r\n",
+      "ls-file.txt\r\n",
+      "style-notebook.css\r\n",
+      "style-table.css\r\n",
+      "5-Visualization.ipynb\r\n"
+     ]
+    }
+   ],
    "source": [
     "#read the updated file\n",
     "!cat ls-file.txt"
