--- a/kallisto_day_2.ipynb
+++ b/kallisto_day_2.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DAY 2\n",
-    "\n",
-    "In order to do differential expression analysis, we need to use another programming language called R. Anaconda provides a convienient way provide an environment with R. Follow the link below and follow the tutorial to build a Python and R environment so you can run the rest of the code.\n",
-    "    \n",
-    "    https://docs.anaconda.com/anaconda/navigator/tutorials/r-lang/"
+    "# DAY 2"
    ]
   },
   {
@@ -68,8 +64,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since everyone should now have anaconda installed you install kallisto by running...\n",
-    "\n",
     "https://pachterlab.github.io/kallisto/download\n",
     "\n",
     "Download the latest version of `kallisto` for your Operating System and place it into the directory"
@@ -104,7 +98,9 @@
     "\n",
     "    -b, --bootstrap-samples=INT   Number of bootstrap samples (default: 0)\n",
     "\n",
-    "*from within the fastq directory*\n",
+    "\n",
+    "Make sure you are in your fastq directory.\n",
+    "Also, you need to make a `bd2k/kallisto_outputs directory` to put the kallisto outputs in\n",
     "\n",
     "##### euploid samples\n",
     "\n",
@@ -129,14 +125,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should now have for folders, with each containing an `abundance.tsv` file. Using pandas we can now load the data using commands similar to what you have done before. Look at the previous notebooks and start to use `pandas` to process the data and find differentially expressed genes."
+    "You should now have four folders, with each containing an `abundance.tsv` file. Using pandas we can now load the data using commands similar to what you have done before. Look at the previous notebooks and start to use `pandas` to process the data and find differentially expressed genes.\n",
+    "\n",
+    "Lets look at a single output file..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target_id</th>\n",
+       "      <th>length</th>\n",
+       "      <th>eff_length</th>\n",
+       "      <th>est_counts</th>\n",
+       "      <th>tpm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>YBR024W_mRNA</td>\n",
+       "      <td>906</td>\n",
+       "      <td>707.00000</td>\n",
+       "      <td>544.0000</td>\n",
+       "      <td>36.9940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>YDL245C_mRNA</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>1505.00000</td>\n",
+       "      <td>902.1420</td>\n",
+       "      <td>28.8197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>YBR232C_mRNA</td>\n",
+       "      <td>360</td>\n",
+       "      <td>161.00000</td>\n",
+       "      <td>46.2893</td>\n",
+       "      <td>13.8231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>YDR320W-B_mRNA</td>\n",
+       "      <td>138</td>\n",
+       "      <td>6.07083</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>YBR021W_mRNA</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>1703.00000</td>\n",
+       "      <td>426.0000</td>\n",
+       "      <td>12.0267</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        target_id  length  eff_length  est_counts      tpm\n",
+       "0    YBR024W_mRNA     906   707.00000    544.0000  36.9940\n",
+       "1    YDL245C_mRNA    1704  1505.00000    902.1420  28.8197\n",
+       "2    YBR232C_mRNA     360   161.00000     46.2893  13.8231\n",
+       "3  YDR320W-B_mRNA     138     6.07083      0.0000   0.0000\n",
+       "4    YBR021W_mRNA    1902  1703.00000    426.0000  12.0267"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "SRR5494628 = pd.read_csv(\"/Users/alexis/Desktop/bd2k/kallisto_outputs/SRR5494628/abundance.tsv\", sep=\"\\t\")\n",
+    "SRR5494628.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to make processing easier with `pandas` we can use these shell commands to combine the columns we want from the four files into one main file. Take a look at these commands and see if you recognize what is happening. Try using `man` to look at what the command actually does.\n",
+    "We are mainly interested in the target_id and tpm column. In order to make processing easier with `pandas` we can use the following shell commands to combine the columns we want from the four files into one main file. Take a look at these commands and see if you recognize what is happening. Try using `man` to look at what the command actually does.\n",
     "\n",
     "```\n",
     "cd kallisto_outputs/\n",
@@ -154,11 +250,248 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the 4 files are combined into onw and the sample names are the column names for their respective columns."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target_id</th>\n",
+       "      <th>length</th>\n",
+       "      <th>SRR5494628</th>\n",
+       "      <th>SRR5494629</th>\n",
+       "      <th>SRR5494630</th>\n",
+       "      <th>SRR5494631</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>YBR024W_mRNA</td>\n",
+       "      <td>906</td>\n",
+       "      <td>36.9940</td>\n",
+       "      <td>30.9409</td>\n",
+       "      <td>37.3838</td>\n",
+       "      <td>38.7345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>YDL245C_mRNA</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>28.8197</td>\n",
+       "      <td>30.2001</td>\n",
+       "      <td>12.2243</td>\n",
+       "      <td>12.9081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>YBR232C_mRNA</td>\n",
+       "      <td>360</td>\n",
+       "      <td>13.8231</td>\n",
+       "      <td>10.0286</td>\n",
+       "      <td>13.3590</td>\n",
+       "      <td>15.9174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>YDR320W-B_mRNA</td>\n",
+       "      <td>138</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>YBR021W_mRNA</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>12.0267</td>\n",
+       "      <td>10.0594</td>\n",
+       "      <td>17.3070</td>\n",
+       "      <td>17.2506</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        target_id  length  SRR5494628  SRR5494629  SRR5494630  SRR5494631\n",
+       "0    YBR024W_mRNA     906     36.9940     30.9409     37.3838     38.7345\n",
+       "1    YDL245C_mRNA    1704     28.8197     30.2001     12.2243     12.9081\n",
+       "2    YBR232C_mRNA     360     13.8231     10.0286     13.3590     15.9174\n",
+       "3  YDR320W-B_mRNA     138      0.0000      0.0000      0.0000      0.0000\n",
+       "4    YBR021W_mRNA    1902     12.0267     10.0594     17.3070     17.2506"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tpms_all_samples= pd.read_csv(\"/Users/alexis/Desktop/bd2k/kallisto_outputs/tpms_all_samples.tsv\", sep=\"\\t\")\n",
+    "tpms_all_samples.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#lets make lists to map the sample names to the condition\n",
+    "euploid = ['SRR5494631','SRR5494630']\n",
+    "aneuploid = ['SRR5494629','SRR5494628']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target_id</th>\n",
+       "      <th>length</th>\n",
+       "      <th>SRR5494628</th>\n",
+       "      <th>SRR5494629</th>\n",
+       "      <th>SRR5494630</th>\n",
+       "      <th>SRR5494631</th>\n",
+       "      <th>euploid_average</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>YBR024W_mRNA</td>\n",
+       "      <td>906</td>\n",
+       "      <td>36.9940</td>\n",
+       "      <td>30.9409</td>\n",
+       "      <td>37.3838</td>\n",
+       "      <td>38.7345</td>\n",
+       "      <td>38.05915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>YDL245C_mRNA</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>28.8197</td>\n",
+       "      <td>30.2001</td>\n",
+       "      <td>12.2243</td>\n",
+       "      <td>12.9081</td>\n",
+       "      <td>12.56620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>YBR232C_mRNA</td>\n",
+       "      <td>360</td>\n",
+       "      <td>13.8231</td>\n",
+       "      <td>10.0286</td>\n",
+       "      <td>13.3590</td>\n",
+       "      <td>15.9174</td>\n",
+       "      <td>14.63820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>YDR320W-B_mRNA</td>\n",
+       "      <td>138</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>YBR021W_mRNA</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>12.0267</td>\n",
+       "      <td>10.0594</td>\n",
+       "      <td>17.3070</td>\n",
+       "      <td>17.2506</td>\n",
+       "      <td>17.27880</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        target_id  length  SRR5494628  SRR5494629  SRR5494630  SRR5494631  \\\n",
+       "0    YBR024W_mRNA     906     36.9940     30.9409     37.3838     38.7345   \n",
+       "1    YDL245C_mRNA    1704     28.8197     30.2001     12.2243     12.9081   \n",
+       "2    YBR232C_mRNA     360     13.8231     10.0286     13.3590     15.9174   \n",
+       "3  YDR320W-B_mRNA     138      0.0000      0.0000      0.0000      0.0000   \n",
+       "4    YBR021W_mRNA    1902     12.0267     10.0594     17.3070     17.2506   \n",
+       "\n",
+       "   euploid_average  \n",
+       "0         38.05915  \n",
+       "1         12.56620  \n",
+       "2         14.63820  \n",
+       "3          0.00000  \n",
+       "4         17.27880  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tpms_all_samples['euploid_average'] = tpms_all_samples[euploid].astype(float).mean(axis=1)\n",
+    "tpms_all_samples.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that you know how to take the average of the 2 euploid samples, you can find the average of the two aneuploid samples. Then you can compare the average transcript expression between each condition. Try taking the difference or the ratio of the two.  "
+   ]
   }
  ],
  "metadata": {
@@ -177,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
