--- a/kallisto_day_2.ipynb
+++ b/kallisto_day_2.ipynb
@@ -100,7 +100,9 @@
     "\n",
     "\n",
     "Make sure you are in your fastq directory.\n",
-    "Also, you need to make a `bd2k/kallisto_outputs directory` to put the kallisto outputs in\n",
+    "Also, you need to make a `bd2k/kallisto_outputs directory` to put the kallisto outputs in.\n",
+    "\n",
+    "Run the following commands and remember to replace the paths with your personal paths.\n",
     "\n",
     "##### euploid samples\n",
     "\n",
@@ -125,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should now have four folders, with each containing an `abundance.tsv` file. Using pandas we can now load the data using commands similar to what you have done before. Look at the previous notebooks and start to use `pandas` to process the data and find differentially expressed genes.\n",
+    "You should now have 4 folders, with each containing an `abundance.tsv` file. Using pandas we can now load the data using commands similar to what you have done before. Look at the previous notebooks and start to use `pandas` to process the data and find differentially expressed genes.\n",
     "\n",
     "Lets look at a single output file..."
    ]
@@ -232,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are mainly interested in the target_id and tpm column. In order to make processing easier with `pandas` we can use the following shell commands to combine the columns we want from the four files into one main file. Take a look at these commands and see if you recognize what is happening. Try using `man` to look at what the command actually does.\n",
+    "We are mainly interested in the target_id(transcript name) and tpm column. In order to make processing easier with `pandas` we can use the following shell commands to combine the columns we want from the four files into one main file. Take a look at these commands and see if you recognize what is happening. Try using `man` to look at what the command actually does.\n",
     "\n",
     "```\n",
     "cd kallisto_outputs/\n",
@@ -253,12 +255,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the 4 files are combined into onw and the sample names are the column names for their respective columns."
+    "Now the 4 files are combined into 1 and the sample names are the column names for their respective columns. Let's look at the new combined file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +351,7 @@
        "4    YBR021W_mRNA    1902     12.0267     10.0594     17.3070     17.2506"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +478,7 @@
        "4         17.27880  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you know how to take the average of the 2 euploid samples, you can find the average of the two aneuploid samples. Then you can compare the average transcript expression between each condition. Try taking the difference or the ratio of the two.  "
+    "Now that you know how to take the average of the 2 euploid samples, you can find the average of the 2 aneuploid samples. Then you can compare the average transcript expression between each condition. Try taking the difference or the ratio of the two. Consider the euploid samples as the \"control\".  "
    ]
   }
  ],
